--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
   </head>
   <body>
+    <section id="start-page" class="start-page">
+      <h1 id="title" class="title">Help me learn Vue JS!</h1>
+      <button id="start-btn" class="btn start-btn">Start</button>
+    </section>
     <script src="js/index.js"></script>
   </body>
 </html>
