--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,16 @@
     <title>Document</title>
   </head>
   <body>
-    <section id="start-page" class="start-page">
+    <section id="start-page" class="start-page hide">
       <h1 id="title" class="title">Help me learn Vue JS!</h1>
       <button id="start-btn" class="btn start-btn">Start</button>
     </section>
+
+    <section id="game-page" class="game-page">
+      <img src="images/doodle.png" alt="" />
+      <p class="dialogue-box">words words words</p>
+    </section>
+
     <script src="js/index.js"></script>
   </body>
 </html>
