--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,15 @@
 
     <section id="game-page" class="game-page hide">
       <div class="flex-row">
-        <h1 class="invisible">I should be invisible!</h1>
+        <div class="flex-column">
+          <button id="choice-one" class="btn choice-btn hide">Choice 1</button>
+          <h1 id="invisible" class="invisible">I should be invisible!</h1>
+        </div>
         <img src="images/doodle.png" alt="" />
-        <button id="btn next-btn" class="btn next-btn">Next</button>
+        <div class="flex-column">
+          <button id="choice-two" class="btn choice-btn hide">Choice 2</button>
+          <button id="next-btn" class="btn next-btn">Next</button>
+        </div>
       </div>
       <p id="dialogue" class="dialogue-box">words words words</p>
     </section>
