--- a/src/index.html
+++ b/src/index.html
@@ -16,16 +16,22 @@
     <section id="game-page" class="game-page hide">
       <div class="flex-row">
         <div class="flex-column">
-          <button id="choice-one" class="btn choice-btn hide">Choice 1</button>
+          <button id="choice-one" class="btn choice-btn hide">Yes</button>
           <h1 id="invisible" class="invisible">I should be invisible!</h1>
         </div>
         <img src="images/doodle.png" alt="" />
         <div class="flex-column">
-          <button id="choice-two" class="btn choice-btn hide">Choice 2</button>
+          <button id="choice-two" class="btn choice-btn hide">No</button>
           <button id="next-btn" class="btn next-btn">Next</button>
         </div>
       </div>
       <p id="dialogue" class="dialogue-box">words words words</p>
+      <div id="clicker-section" class="clicker-section hide">
+        <button id="clicker-btn" class="btn clicker-btn">Teach Vue</button>
+        <p class="click-report">
+          Total clicks: <span id="click-number">0</span>
+        </p>
+      </div>
     </section>
 
     <script src="js/index.js"></script>
