it wont workkkkk

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
           <button id="choice-one" class="btn choice-btn hide">Yes</button>
           <h1 id="invisible" class="invisible">I should be invisible!</h1>
         </div>
-        <img src="images/doodle.png" alt="" />
+        <img src="images/neutral.png" alt="game image" id="game-img" />
         <div class="flex-column">
           <button id="choice-two" class="btn choice-btn hide">No</button>
           <button id="next-btn" class="btn next-btn">Next</button>
