--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <section id="start-page" class="start-page hide">
+    <section id="start-page" class="start-page">
       <h1 id="title" class="title">Help me learn Vue JS!</h1>
       <button id="start-btn" class="btn start-btn">Start</button>
     </section>
@@ -40,10 +40,21 @@
       </div>
     </section>
 
-    <section id="end-page">
-      <img src="images/ending1.png" alt="" id="img-ed1" class="ending-img" />
-      <h1>Ending Title</h1>
-      <p>Some random comment by me!</p>
+    <section id="ending-page" class="ending-page hide">
+      <img
+        src="images/ending1.png"
+        alt=""
+        id="img-ed1"
+        class="ending-img hide"
+      />
+      <img
+        src="images/ending2.png"
+        alt=""
+        id="img-ed2"
+        class="ending-img hide"
+      />
+      <h1 id="ending-title" class="ending-title">Ending Title</h1>
+      <p id="comments" class="comments">Some random comment by me!</p>
     </section>
 
     <script src="js/index.js"></script>
